@@ -139,7 +139,7 @@ All full-dump filelist is printed to standard output. And with:
 An incremental dump filelist is printed.
 
 .SH FORMAT
-The default format \fBrdup\fR uses is: "%p%m %u %g %l %s %n\\n"
+The default format \fBrdup\fR uses is: "%p%m %u %g %l %s\\n%n"
 .PP
 The following escape sequences are understood by \fBrdup\fR:
 
@@ -167,7 +167,8 @@ typical example is:
 
 .SH OUTPUT FORMAT 
 The default output generated by \fBrdup\fR is formatted like:
-        +|-MODE UID GID PATH_SIZE FILE_SIZE PATH
+        +|-MODE UID GID PATH_SIZE FILE_SIZE\\n
+        PATH
 .PP
 Where:
 .TP
@@ -198,7 +199,8 @@ always be zero.
 the pathname
 .PP
 A typical example look like this:
-        +33216 1000 1000 8 11288 bin/rdup
+        +33216 1000 1000 8 11288 
+        bin/rdup
 .PP
 This example tells us, that it should be backed up, it has a user id
 and group id of 1000, the length of the path is 8 bytes, the size
